Refactor product management module to order management with Clean Architecture
- Updated project structure to reflect Clean Architecture principles.
- Changed domain model from `Producto` to `Pedido` with appropriate value objects.
- Implemented use cases for creating and querying orders.
- Modified controller to handle order creation and retrieval.
- Updated persistence layer to store orders using JPA with UUID as identifier.
- Removed deprecated DTOs and introduced new ones for order requests and responses.
- Enhanced validation and error handling for order creation.
- Updated tests to reflect changes in the order management logic.